<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.geneticcalc.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.geneticcalc.ui.fragments.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_information"
        android:name="com.example.geneticcalc.ui.fragments.InformationFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_information" >
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_navigation_to_profile"
            app:destination="@id/navigation_relativeprofile"
            app:popUpTo="@layout/fragment_relativesprofile"/>
    </fragment>


    <fragment
        android:id="@+id/navigation_relativeprofile"
        android:name="com.example.geneticcalc.ui.fragments.RelativesProfile"
        android:label="Профиль"
        tools:layout="@layout/fragment_relativesprofile" >
        <argument
            android:name="id"
            app:argType="integer" />

        <action
            android:id="@+id/action_profile_to_navigation"
            app:destination="@+id/navigation_information"
            app:popUpTo="@layout/fragment_information" />
    </fragment>

</navigation>